--- a/style.css
+++ b/style.css
@@ -12,5 +12,6 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center; 
+    overflow: hidden;
     height: 100vh;
 }
