--- a/style.css
+++ b/style.css
@@ -14,4 +14,9 @@ body {
     justify-content: center; 
     overflow: hidden;
     height: 100vh;
+    background-color:antiquewhite;
+}
+
+h3 {
+    color: rgb(131, 131, 131);
 }
