--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Muli', sans-serif;
     margin: 0;
     
     display: flex;
@@ -16,7 +16,22 @@ body {
     height: 100vh;
     background-color:antiquewhite;
 }
-
-h3 {
-    color: rgb(131, 131, 131);
+ 
+.container {
+    display: flex;
+    width: 90vw;
 }
+
+.panel {
+    background-size: auto 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 80vh;
+    border-radius: 25px;
+    color: #bdbdbd;
+    flex: 0.5;
+    margin: 12px;
+    position: relative;
+    transition: flex 0.5s ease-in;
+}
+
