--- a/style.css
+++ b/style.css
@@ -55,3 +55,17 @@ body {
     opacity: 1;
 }
 
+/*Media query used for when viewport shrinks less than 600px*/
+
+@media (max-width: 600px) {
+    .container {
+        width: 100vw;
+    }
+    /*Makes the fourth and fifth picture disappear*/
+    .panel:nth-of-type(4), 
+    .panel:nth-of-type(5)  {
+        display: none;
+    }
+}
+
+
